fix: compile installer at Java 8 for Windows compatibility
Windows users getting "A Java Exception has occurred" because the
installer was compiled at Java 17 and they had older Java on PATH.
Now targets Java 8 like OptiFine. Replaced all Java 9+ APIs with
Java 8 equivalents. Bumped version to 0.1.1.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>